# RustProjects

./: .gitignore  README.md
AsciiArts/: Cargo.toml
AsciiArts/src/: main.rs
DirectoryChangesLog/: Cargo.toml  README.md
DirectoryChangesLog/.github/workflows/: release.yml
DirectoryChangesLog/src/: dcl  functions.rs  main.rs
DiscordVcControl/: Cargo.toml
PasswordManager/: Cargo.toml
PasswordManager/src/: functions.rs  main.rs
PswrdMngrREPL/: Cargo.toml
PswrdMngrREPL/src/: functions.rs  main.rs
RepositoryChangesLog/src/: main.rs
animation_test/: Cargo.toml
animation_test/media/videos/1080p60/partial_movie_files/Scene/: partial_movie_file_list.txt
animation_test/media/videos/480p15/partial_movie_files/Scene/: partial_movie_file_list.txt
animation_test/src/: animation.py  main.rs
rust_manim/: Cargo.toml  pyproject.toml
rust_manim/src/: lib.rs
